--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,20 @@
-{%  extends 'base.html' %}
+{% extends 'base.html' %}
 
-{% %}
+{% block body %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/home.css')}}">
+
+<div class="container">
+        <div class="avatar">
+            <a href="#">
+                <img src="{{url_for('static', filename='images/padme.jpg', width=100)}}" />
+                </a>
+
+        </div>
+        <div class="content">
+            <h1>Floating CSS animation</h1>
+
+            <p>Padma Gnanapriya</p>
+        </div>
+    </div>
+
+{% endblock %}
