all bugs are fixed

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,14 +6,20 @@
 <div class="container">
         <div class="avatar">
             <a href="#">
-                <img src="{{url_for('static', filename='images/padme.jpg', width=100)}}" />
+                <div class="bb">
+{#                <img src="{{url_for('static', filename='images/padme.jpg', width=100)}}" />#}
                 </a>
 
         </div>
         <div class="content">
-            <h1>Floating CSS animation</h1>
-
-            <p>Padma Gnanapriya</p>
+            <h1>Hi, I'm Padma Gnanapriya<br>
+                I am undergraduate from the University of Kelaniya as Software Engineer. I am a fresher and I am
+                currently looking for a suitable job. I have a very dynamic personality.  I have experience in
+                teamwork and we have developed applications. So git version control and teamwork aren't novel
+                things for me.  I have learnt Python, Java, PHP, JavaScript, HTML, MySQL, Git and several languages,
+                APIs, frameworks, Libraries, and trending technologies. Apart from this, I am interested in painting,
+                writing on medium. In my free time, I develop websites study novel technologies.
+            </h1>
         </div>
     </div>
 
