--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,20 +1,19 @@
-container{
-	height: 100%;
+container, body, html{
 	margin: 0;
 	padding: 0;
+	height: 100%;
 	font-family: 'Helvetica', sans-serif;
 	background: rgb(26, 188, 156);
-	background: -moz-linear-gradient(-45deg, rgba(26, 188, 156, 1) 0%, rgba(142, 68, 173, 1) 100%);
-	background: -webkit-linear-gradient(-45deg, rgba(26, 188, 156, 1) 0%, rgba(142, 68, 173, 1) 100%);
-	background: linear-gradient(135deg, rgba(26, 188, 156, 1) 0%, rgba(142, 68, 173, 1) 100%);
+	background: -moz-linear-gradient(180deg, rgba(26, 188, 156, 1) 0%, rgba(142, 68, 173, 1) 100%);
+	background: -webkit-linear-gradient(180deg, rgba(26, 188, 156, 1) 0%, rgba(142, 68, 173, 1) 100%);
+	/*background: linear-gradient(135deg, rgba(26, 188, 156, 1) 0%, rgba(142, 68, 173, 1) 100%);*/
 }
 
 h1 {
-	font-size: 24px;
+	font-size: 22px;
 	margin: 10px 0 0 0;
 	font-weight: lighter;
-	text-transform: uppercase;
-	color: #eeeeee;
+	color: darkblue;
 }
 
 p {
@@ -50,7 +49,6 @@ span a {
 
 .container {
 	width: 100%;
-	height: 100%;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -63,20 +61,20 @@ ul li {
 
 .avatar {
 	width: 250px;
-	height: 144px;
+	height: 153px;
     /* overflow: hidden; */
-	border: 5px orangered solid;
+	border: 5px black solid;
 	box-shadow: 0 5px 15px 0px rgb(0,0,0);
 	animation: float 6s ease-in-out infinite;
+	margin-top:130px;
 
 }
 
 .content {
 	width: 100%;
-	max-width: 600px;
 	padding: 20px 40px;
 	box-sizing: border-box;
-	text-align: left;
+	text-align: justify;
 }
 
 img { width: 100%; height: auto; }
