--- a/templates/about.html
+++ b/templates/about.html
@@ -1,35 +1,10 @@
 {% extends 'base.html' %}
 
 {% block body %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/about.css')}}">
 
-    <div class="parallax" style="height: 300px"></div>
-    <nav>
-          <section>
-                <h1>University of Kelaniya</h1>
-                <img src="{{url_for('static', filename='images/kelaniya.jpg', width=100)}}" />
-                <p>I have been selected for the University of Kelaniya to study Software Engineering. </p>
-          </section>
-    </nav>
-
-    <div class="parallax"></div>
-    <nav>
-          <section>
-                <h1>Mahinda College - Galle</h1>
-                <img src="{{url_for('static', filename='images/mahinda_college.jpg')}}" />
-                <p>Since 2008-01-25 I have studied at Mahinda College, Galle. I did my O/L s and A/L there. I got 7A s and 2B s for OL. In 2017 I faced for A/L examination in Physical Stream.</p>
-                <p>Combined Maths - A</p><p>Physics - A</p><p>Chemistry - C</p><p>Activities and Societies: </p>
-          </section>
-    </nav>
-
-    <div class="parallax"></div>
-     <nav>
-          <section>
-                <h1>Polpagoda Daramapala MV</h1>
-                <img src="{{url_for('static', filename='images/polpagoda.jpg', width=100)}}" />
-                <p>I passed grade 5 scholarship exam with flying marks there.</p>
-          </section>
-    </nav>
-
+    
+    <h1>This is about</h1>
+    <h1>This is about</h1>
+    <h1>This is ablopt</h1>
 
 {% endblock %}
