--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,38 +1,10 @@
 {% extends 'base.html' %}
 
 {% block body %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/contact.css')}}">
 
-    <br><br><br>
-    <div class="contactblock">
-        <a href="tel:+94766328189"><h2>Call</h2><br>
-        <img src="{{url_for('static', filename='images/mobile.gif', width=10)}}" />076-632-8189</a><br>
-    </div>
-    <div class="contactblock">
-        <a href="sms:+94766328189"><h2>SMS</h2><br>
-        <img src="{{url_for('static', filename='images/sms.gif', width=10)}}" />0766328189</a><br>
-    </div>
-    <div class="contactblock">
-        <a href="mailto:padmaganapriya@gmail.com"><h2>email</h2><br>
-        <img src="{{url_for('static', filename='images/email.gif', width=10)}}" />padmaganapriya@gmail.com</a><br>
-        <a href="mailto:padmaganapriya@outlook.com">padmaganapriya@outlook.com</a>
-    </div>
-    <div class="contactblock">
-        <a href="https://api.whatsapp.com/send?phone=+94766328189"><h2>Whatsapp</h2><br>
-        <img src="{{url_for('static', filename='images/whatsapp.gif', width=10)}}" />0766328189</a><br>
-    </div>
-
-
-    <svg>
-        <style>@keyframes marching-ants{to {stroke-dashoffset: -15px;}}</style>
-        <rect width="100%" height="100%" style="stroke: black; stroke-width: 10px; fill :none;
-        stroke-dasharray: 10px, 5px; animation: marching-ants 0.2s infinite;"/>
-
-    </svg>
-
-
-
-
-
+    
+    <h1>This is contact</h1>
+    <h1>This is Contact</h1>
+    <h1>This is Contactt</h1>
 
 {% endblock %}
