--- a/templates/home.html
+++ b/templates/home.html
@@ -3,12 +3,15 @@
 {% block body %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css')}}">
 
-<div class="container">
-        <div class="avatar">
-            <a href="#">
-                <img src="{{url_for('static', filename='images/padme.jpg', width=100)}}" />
-                </a>
 
+<div class="container">
+
+        <div class="avatar">
+            <div class="rainbow">
+                <a href="#">
+                    <img src="{{url_for('static', filename='images/padme.jpg', width=100)}}" />
+                </a>
+            </div>
         </div>
         <div class="content">
             <h1>Floating CSS animation</h1>
