start decorate using colors

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -67,8 +67,8 @@ ul li {
 	width: 250px;
 	height: 152px;
     /* overflow: hidden; */
-	border: 5px orangered solid;
-	box-shadow: 0 5px 15px 0px rgb(0,0,0);
+	/*border: 5px orangered solid;*/
+	/*box-shadow: 0 5px 15px 0px rgb(0,0,0);*/
 	animation: float 6s ease-in-out infinite;
 }
 
@@ -80,4 +80,57 @@ ul li {
 	text-align: left;
 }
 
-img { width: 100%; height: auto; }
+img { width: 100%; height: 100%;  }
+
+
+.rainbow {
+    position: relative;
+    z-index: 0;
+    width: 360px;
+    height: 210px;
+    border-radius: 10px;
+    overflow: hidden;
+    padding: 7px;
+    margin:1px;
+	box-shadow: 0 5px 15px 0px rgb(0,0,0);
+}
+
+.rainbow::before {
+    content: '';
+    position: absolute;
+    z-index: -2;
+    left: -50%;
+    top: -50%;
+    width: 200%;
+    height: 200%;
+    background-color: #399953;
+    background-repeat: no-repeat;
+    background-size: 50% 50%, 50% 50%;
+    background-position: 0 0, 100% 0, 100% 100%, 0 100%;
+	background-image: linear-gradient(black, #0e102c), linear-gradient(gold, yellow), linear-gradient(#0e102c,black), linear-gradient(yellow,gold);
+    /*background-image: linear-gradient(#399953, #399953), linear-gradient(#fbb300, #fbb300), linear-gradient(#d53e33, #d53e33), linear-gradient(#377af5, #377af5);*/
+    animation: rotate 4s linear infinite;
+}
+
+.rainbow::after {
+    content: '';
+    position: absolute;
+    z-index: -1;
+    left: 6px;
+    top: 6px;
+    width: calc(100% - 12px);
+    height: calc(100% - 12px);
+    background: transparent;
+    border-radius: 5px;
+}
+
+
+*, *::before, *::after {
+	box-sizing: border-box;
+}
+
+@keyframes rotate {
+	100% {
+		transform: rotate(1turn);
+	}
+}
