--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,8 @@
             </div>
         </div>
         <div class="content">
-            <h1>Floating CSS animation</h1>
+            <br><br>
+            <h1>I'm Padma Gnanapriya</h1>
 
             <p>Padma Gnanapriya</p>
         </div>
