start about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,8 +1,22 @@
 {% extends 'base.html' %}
 
 {% block body %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/about.css')}}">
 
-    
+    <div class="parallax mahinde"><br><br><br>
+    <p>Since 2008-01-25 I have studied at Mahinda College, Galle. I did my  O/L s and A/L there.
+    I have been selected for the University of Kelaniya to study Software Engineering. I got 7A s
+    and 2B s for my OL. In 2017 I faced for A/L examination in Physical Stream.
+        <br>Combined Mathematics - A
+        <br>Physics - A
+        <br>Chemistry - C<br>
+    Activities and Societies:.</p></div>
+
+    <div class="parallax polpagoda"><br><br><br>
+    <p>I passed </p></div>
+
+
+
     <h1>This is about</h1>
     <h1>This is about</h1>
     <h1>This is ablopt</h1>
