--- a/templates/home.html
+++ b/templates/home.html
@@ -15,9 +15,12 @@
         </div>
         <div class="content">
             <br><br>
-            <h1>I'm Padma Gnanapriya</h1>
 
-            <p>Padma Gnanapriya</p>
+
+            <p>Hello there I'm Padma Gnanapriya, level 2 undergraduate at University of Kelaniya.
+            Currently, I'm seeking a part time time software engineering. If you think I'm a
+             good fit, please contact me.</p>
+            <p>git, linkin,facebook,whatsapp icons</p>
         </div>
     </div>
 
