start article page

--- a/templates/about.html
+++ b/templates/about.html
@@ -13,12 +13,7 @@
     Activities and Societies:.</p></div>
 
     <div class="parallax polpagoda"><br><br><br>
-    <p>I passed </p></div>
+    <p>I passed grade 5 scholarship exam for Polpogoda Darmapala MV and I entered to Mahinda college Galle.</p></div>
 
-
-
-    <h1>This is about</h1>
-    <h1>This is about</h1>
-    <h1>This is ablopt</h1>
 
 {% endblock %}
