--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -16,6 +16,8 @@ h2{
 
 body{
 	align-items: center;
+	background: -moz-linear-gradient(0deg, lightblue 0%, darkgrey 100%);
+	background: -webkit-linear-gradient(0deg, lightblue 0%, darkgrey 100%);
 
 }
 
