--- a/templates/article.html
+++ b/templates/article.html
@@ -1,7 +1,19 @@
 {% extends 'base.html' %}
 
 {% block body %}
+ <link rel="stylesheet" href="{{ url_for('static', filename='css/article.css')}}">
+    <nav style="background-color: orangered; padding: 10px;">
 
-    articles
+          <section style="background-color: olivedrab; min-height: 400px;">  <!--Need to init minimum height if image exit here-->
+            <h1>SubTitle mine_3</h1>
+            <img src="{{url_for('static', filename='images/padme.jpg', width=10)}}" style="width: 200px"/>
+            <p>Mahinda College is a Buddhist boys' school in Galle, Sri Lanka. The school was established on 1 March 1892 by the Buddhist Theosophical Society led by Colonel Henry Steel Olcott. Today it is a national school, which provides primary and secondary education across 13 grades..</p>
+          </section>
+          <section style="background-color: cyan; min-height: 400px;">  <!--Need to init minimum height if image exit here-->
+            <h1>SubTitle mine_3</h1>
+            <img src="{{url_for('static', filename='images/padme.jpg', width=1)}}" style="width: 200px"/>
+            <p>Mahinda College is a Buddhist boys' school in Galle, Sri Lanka. The school was established on 1 March 1892 by the Buddhist Theosophical Society led by Colonel Henry Steel Olcott. Today it is a national school, which provides primary and secondary education across 13 grades..</p>
+          </section>
+    </nav>
 
 {% endblock %}
