--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -40,6 +40,8 @@ body{
     overflow: hidden;
     padding: 2rem;
     margin:10px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .rainbow::before {
