--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/contact.css')}}">
     <br>
     <div class="container">
+        <h1>Contact details</h1>
         <div class="rainbow">
             <a href="tel:+94766328189"><h2>Call</h2><br>
             <img src="/static/images/mobile.gif?width=10">076-632-8189</a><br>
