fixed UI, no bugs

--- a/templates/article.html
+++ b/templates/article.html
@@ -4,7 +4,7 @@
  <link rel="stylesheet" href="{{ url_for('static', filename='css/article.css')}}">
 
     <nav style="padding: 30px; background: transparent">
-                        <h1>My medium articles</h1>
+                        <br><br><br><h1 style="text-align: center">My medium articles</h1>
                           {# *****************add new article ************************* #}
                         <a href="https://medium.com/@padmaisuru/what-is-a-variable-in-computer-programming-5506164d9482?source=friends_link&sk=e469aca130ce64ec76c4951137c2b284">
                             <section>
