--- a/templates/project.html
+++ b/templates/project.html
@@ -2,6 +2,6 @@
 
 {% block body %}
 
-   <h3 style="text-align: center; padding: 50px"> Sorry <br>You haven't permission to see this page.<br> Go back</h3>
+   <h3 style="text-align: center; padding: 50px"> <br><br></br>Sorry <br>You haven't permission to see this page.<br> Go back</h3>
 
 {% endblock %}
