--- a/templates/home.html
+++ b/templates/home.html
@@ -4,13 +4,13 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css')}}">
 
 
-<div class="container">
+    <div class="container">
 
         <div class="avatar">
             <div class="rainbow">
-                <a href="#">
+
                     <img src="{{url_for('static', filename='images/padme.jpg', width=100)}}" />
-                </a>
+
             </div>
         </div>
         <div class="content">
@@ -20,8 +20,49 @@
             <p>Hello there I'm Padma Gnanapriya, level 2 undergraduate at University of Kelaniya.
             Currently, I'm seeking a part time time software engineering. If you think I'm a
              good fit, please contact me.</p>
-            <p>git, linkin,facebook,whatsapp icons</p>
         </div>
     </div>
+
+
+    <div style="padding: 30px">
+      <a href="https://www.facebook.com/padma.kalhara/">
+        <svg height="100%" version="1.1" width="100%" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="overflow: hidden; position: relative; top: -0.322917px;" viewBox="0 0 24 24" preserveAspectRatio="xMinYMin"><desc style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Created Padme</desc>
+          <defs></defs>
+          <path class="pathme" stroke="mediumblue" d="M19,4.00860595703125C19,4.1845703125,19,7,19,7C19,7,17,7,17,7C16.447715250169207,7,16,7.447715250169207,16,8C16,8,16,10,16,10C16,10,19,10,19,10C19,10,19,13,19,13C19,13,16,13,16,13C16,13,16,20,16,20C16,20,13,20,13,20C13,20,13,13,13,13C13,13,11,13,11,13C11,13,11,10,11,10C11,10,13,10,13,10C13,10,13,7.5,13,7.5C13,5.56,14.57,4,16.5,4C16.5,4,19,4,19,4M20,2C20,2,4,2,4,2C2.8954305003384135,2,1.9999999999999998,2.8954305003384135,2,4C2,4,2,20,2,20C2,21.104569499661586,2.8954305003384135,22,4,22C4,22,20,22,20,22C21.104569499661586,22,22,21.104569499661586,22,20C22,20,22,4,22,4C22,2.89,21.1,2,20,2C20,2,20,2,20,2" stroke-linejoin="round" stroke-linecap="round" stroke-width="1"  style="-webkit-tap-highlight-color: mediumblue;">
+          </path>
+        </svg>
+      </a>
+
+    <a href="https://www.linkedin.com/in/padma-gnanapriya-16b515180">
+      <svg height="100%" version="1.1" width="100%" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="overflow: hidden; position: relative; top: -0.322917px;" viewBox="0 0 24 24" preserveAspectRatio="xMinYMin"><desc style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Created Padme</desc>
+        <defs></defs>
+        <path class="pathme" stroke="#22C3D4" d="M18.99139404296875,19C18.8154296875,19,16,19,16,19C16,19,16,13.7,16,13.7C16,12.87157287525381,15.32842712474619,12.2,14.5,12.2C13.67157287525381,12.2,13,12.87157287525381,13,13.7C13,13.7,13,19,13,19C13,19,10,19,10,19C10,19,10,10,10,10C10,10,13,10,13,10C13,10,13,11.2,13,11.2C13.5,10.36,14.59,9.8,15.5,9.8C17.432996624407778,9.8,19,11.367003375592224,19,13.3C19,13.3,19,19,19,19M6.5,8.31C5.5,8.31,4.69,7.5,4.69,6.5C4.69,5.500364602806264,5.500364602806264,4.69,6.5,4.69C7.5,4.69,8.31,5.5,8.31,6.5C8.31,7.499635397193736,7.499635397193736,8.31,6.5,8.31M8,19C8,19,5,19,5,19C5,19,5,10,5,10C5,10,8,10,8,10C8,10,8,19,8,19M20,2C20,2,4,2,4,2C2.89,2,2,2.89,2,4C2,4,2,20,2,20C2,21.104569499661586,2.8954305003384135,22,4,22C4,22,20,22,20,22C21.104569499661586,22,22,21.104569499661586,22,20C22,20,22,4,22,4C22,2.89,21.1,2,20,2C20,2,20,2,20,2" stroke-linejoin="round" stroke-linecap="round" stroke-width="1"  style="-webkit-tap-highlight-color: #22C3D4;">
+        </path>
+      </svg>
+    </a>
+
+    <a href="https://github.com/PadmaGnanapriya">
+      <svg height="100%" version="1.1" width="100%" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="overflow: hidden; position: relative; top: -0.322917px;" viewBox="-2 -2 28 28" preserveAspectRatio="xMinYMin"><desc style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Created Padme</desc>
+        <defs></defs>
+        <path class="pathme" stroke="purple" d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm0 6c-3.313 0-6 2.686-6 6 0 2.651 1.719 4.9 4.104 5.693.3.056.396-.13.396-.289v-1.117c-1.669.363-2.017-.707-2.017-.707-.272-.693-.666-.878-.666-.878-.544-.373.041-.365.041-.365.603.042.92.619.92.619.535.917 1.403.652 1.746.499.054-.388.209-.652.381-.802-1.333-.152-2.733-.667-2.733-2.965 0-.655.234-1.19.618-1.61-.062-.153-.268-.764.058-1.59 0 0 .504-.161 1.65.615.479-.133.992-.199 1.502-.202.51.002 1.023.069 1.503.202 1.146-.776 1.648-.615 1.648-.615.327.826.121 1.437.06 1.588.385.42.617.955.617 1.61 0 2.305-1.404 2.812-2.74 2.96.216.186.412.551.412 1.111v1.646c0 .16.096.347.4.288 2.383-.793 4.1-3.041 4.1-5.691 0-3.314-2.687-6-6-6z" stroke-linejoin="round" stroke-linecap="round" stroke-width="1"  style="-webkit-tap-highlight-color: purple;">
+        </path>
+      </svg>
+    </a>
+
+    <a href="">
+    <svg height="100%" version="1.1" width="100%" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="overflow: hidden; position: relative; top: -0.322917px;" viewBox="0 0 16 16" preserveAspectRatio="xMinYMin"><desc style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Created Padme</desc>
+      <defs></defs>
+      <path class="pathme" stroke="green" d="M 7.5 1 C 3.914063 1 1 3.914063 1 7.5 C 1 8.796875 1.417969 9.984375 2.070313 11 L 0.953125 14.121094 L 4.429688 13.140625 C 5.351563 13.644531 6.375 14 7.5 14 C 11.085938 14 14 11.085938 14 7.5 C 14 3.914063 11.085938 1 7.5 1 Z M 7.5 2 C 10.542969 2 13 4.457031 13 7.5 C 13 10.542969 10.542969 13 7.5 13 C 6.457031 13 5.492188 12.707031 4.65625 12.203125 L 4.472656 12.089844 L 2.546875 12.628906 L 3.171875 10.894531 L 3.019531 10.683594 C 2.378906 9.78125 2 8.6875 2 7.5 C 2 4.457031 4.457031 2 7.5 2 Z M 5.0625 4 C 4.949219 4 4.761719 4.046875 4.601563 4.234375 C 4.445313 4.417969 4 4.867188 4 5.78125 C 4 6.691406 4.617188 7.574219 4.703125 7.699219 C 4.789063 7.824219 5.917969 9.695313 7.644531 10.5 C 8.054688 10.691406 8.375 10.804688 8.625 10.890625 C 9.039063 11.03125 9.414063 11.011719 9.710938 10.964844 C 10.042969 10.910156 10.730469 10.515625 10.875 10.082031 C 11.015625 9.648438 11.019531 9.277344 10.972656 9.199219 C 10.933594 9.121094 10.816406 9.074219 10.644531 8.984375 C 10.472656 8.890625 9.625 8.441406 9.46875 8.382813 C 9.3125 8.316406 9.195313 8.289063 9.078125 8.472656 C 8.964844 8.660156 8.636719 9.078125 8.535156 9.199219 C 8.433594 9.324219 8.335938 9.339844 8.164063 9.246094 C 7.988281 9.152344 7.433594 8.957031 6.777344 8.324219 C 6.265625 7.832031 5.917969 7.226563 5.820313 7.039063 C 5.71875 6.851563 5.808594 6.753906 5.894531 6.664063 C 5.972656 6.578125 6.066406 6.445313 6.152344 6.335938 C 6.238281 6.230469 6.265625 6.148438 6.324219 6.027344 C 6.382813 5.902344 6.355469 5.792969 6.3125 5.703125 C 6.265625 5.609375 5.921875 4.695313 5.78125 4.324219 C 5.640625 3.964844 5.496094 4.011719 5.390625 4.007813 C 5.292969 4 5.175781 4 5.0625 4 Z" stroke-linejoin="round" stroke-linecap="round" stroke-width="1"  style="-webkit-tap-highlight-color: green;">
+      </path>
+    </svg>
+    </a>
+
+    </div>
+
+
+    <script>
+      var path = document.querySelector('.pathme');
+      var length = path.getTotalLength();
+    </script>
 
 {% endblock %}
