--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,9 @@
 </div>
 
 
-
+<footer>
+    Copyright © Padma Gnanapriya. All Rights Reserved.
+</footer>
 
 
 <script src="{{url_for('static', filename='js/main.js')}}"></script>
