--- a/static/css/main.css
+++ b/static/css/main.css
@@ -60,7 +60,14 @@ body {
   .sidebar a {font-size: 18px;}
 }
 
-
+footer{
+  background: #111111;
+  color: #818181;
+  font-size: 16px;
+  padding: 10px;
+  text-align: center;
+  bottom: 0;
+}
 
 
 
