Finish my webpage 1 step

--- a/templates/about.html
+++ b/templates/about.html
@@ -4,16 +4,16 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/about.css')}}">
 
     <div class="parallax mahinde"><br><br><br>
-    <p>Since 2008-01-25 I have studied at Mahinda College, Galle. I did my  O/L s and A/L there.
-    I have been selected for the University of Kelaniya to study Software Engineering. I got 7A s
-    and 2B s for my OL. In 2017 I faced for A/L examination in Physical Stream.
-        <br>Combined Mathematics - A
-        <br>Physics - A
-        <br>Chemistry - C<br>
-    Activities and Societies:.</p></div>
+    <p>I did my OLs and ALs at Mahinda College, Galle. I got 7A s and 2B s for my OLs. In 2017 I faced for A/L examination in Physical Stream and obtained the following results;  <br>
+Combined Maths - A <br>
+Physics - A  <br>
+Chemistry - C <br> <br>
+Activities and Societies: <br>
+I was an active member of the school's astronomy club, Buddhist association, Environmental club and world organisation of scout moment,
+and I was an outstanding player in the school's chess team.</p></div>
 
     <div class="parallax polpagoda"><br><br><br>
-    <p>I passed grade 5 scholarship exam for Polpogoda Darmapala MV and I entered to Mahinda college Galle.</p></div>
+    <p>I passed the grade 5 scholarship exam at Polpogoda Dharmapala MV and I entered to Mahinda College Galle.</p></div>
 
 
 {% endblock %}
