--- a/templates/home.html
+++ b/templates/home.html
@@ -17,11 +17,11 @@
             <br><br>
 
 
-            <p>Hello there I'm Padma Gnanapriya, level 2 undergraduate at University of Kelaniya.
-            Currently, I'm seeking a part time time software engineering. If you think I'm a
-             good fit, please contact me.</p>
+            <p>Hello, there I'm Padma Gnanapriya, level 2 undergraduate at the University of Kelaniya. Currently, I'm seeking for a part-time job opportunity in software engineering. If you think I'm a good fit, please contact me.</p>
+
+
         </div>
-    </div>
+
 
 
     <div style="padding: 30px">
@@ -56,13 +56,16 @@
       </path>
     </svg>
     </a>
-
     </div>
 
 
+
+
+   </div>
+
     <script>
-      var path = document.querySelector('.pathme');
-      var length = path.getTotalLength();
+        var path = document.querySelector('.pathme');
+        var length = path.getTotalLength();
     </script>
 
 {% endblock %}
