--- a/templates/project.html
+++ b/templates/project.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 
 {% block body %}
-
-   <h3 style="text-align: center; padding: 50px"> <br><br></br>Sorry <br>You haven't permission to see this page.<br> Go back</h3>
-
+    <div style="min-height: 580px ">
+         <h3 style="text-align: center; padding: 50px;"> <br><br></br>Sorry <br>You haven't permission to see this page.<br> Go back</h3>
+    </div>
+    
 {% endblock %}
