--- a/templates/about.html
+++ b/templates/about.html
@@ -5,10 +5,10 @@
 
     <div class="parallax mahinde"><br><br><br>
     <p>I did my OLs and ALs at Mahinda College, Galle. I got 7A s and 2B s for my OLs. In 2017 I faced for A/L examination in Physical Stream and obtained the following results;  <br>
-Combined Maths - A <br>
-Physics - A  <br>
-Chemistry - C <br> <br>
-Activities and Societies: <br>
+&#9734;  Combined Maths - A <br>
+&#9734;  Physics - A  <br>
+&#9734;  Chemistry - C <br> <br>
+<b>Activities and Societies:</b> <br>
 I was an active member of the school's astronomy club, Buddhist association, Environmental club and world organisation of scout moment,
 and I was an outstanding player in the school's chess team.</p></div>
 
