--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,15 @@
     <title>Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css')}}">
+
+    <link rel="icon" href="images/favicon_IAP_6.ico" type="image/gif" sizes="16x16">
+    <meta name="keywords" content="Padma Gnanapriya,University of Kelaniya, Mahinda College, Galle, Polpagoda Daramapala MV, Padma,Pathma, Pathma Chanapriya, Padma Gnanappriya, Godapitye Hewa Arachchige Padma Gnanapriya, Software Engineering Kelaniya, Software Engineering Teaching Unit, Student, Undergraduate, Sri Lanka University student, Southern Country, GHA Padma Gnanapriya, පද්ම ඥාණප්‍රිය, පද්ම ඡණප්‍රිය, පද්ම ඥානප්‍රිය, පද්ම ඤාණප්‍රිය, පද්ම ඤණප්‍රිය, පද්ම ඤානප්‍රිය, පත්ම ඥාණප්‍රිය, පත්ම ඡණප්‍රිය, පත්ම ඥානප්‍රිය, පත්ම ඤාණප්‍රිය, පත්ම ඤණප්‍රිය, පත්ම ඤානප්‍රිය, පත්ම, පද්ම, ඥාණප්‍රිය,  ඥාණප්පිය, ඥානප්පිය,பத்ம ஞானப்பிரிய, பத்ம ஞாணப்ரிய, பத்ம ஞானப்ரிய, பத்ம சானப்பிரிய, பத்ம ஜானபிரிய, பத்ம ஞானப்பிரியா, பத்ம, ஞானபிரிய, ஞாணப்பிரிய,G H A Padma Gnanapriya, G.H.A. Padma Gnanapriya, " />
+    <meta name="description" content="Padma Gnanapriya">
+    <meta name="author" content="Padma Gnanapriya">
+    <meta name="robots" content="index, follow">
+
 </head>
-<body>
+<body oncontextmenu="return false;">
 
 
 
@@ -39,7 +46,9 @@
 
 
 <footer>
-    Copyright © Padma Gnanapriya. All Rights Reserved.
+    <sub>No template or bootstrap was used to build this site. Create by Padma Gnanapriya.</sub><br>
+    Copyright © <b>Padma Gnanapriya.</b> All Rights Reserved.
+
 </footer>
 
 
