--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Padma Gnanapriya</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css')}}">
 
@@ -11,6 +11,11 @@
     <meta name="description" content="Padma Gnanapriya">
     <meta name="author" content="Padma Gnanapriya">
     <meta name="robots" content="index, follow">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/images/favicon-16x16.png">
+    <link rel="manifest" href="/static/images/site.webmanifest">
 
 </head>
 <body oncontextmenu="return false;">
@@ -50,6 +55,16 @@
     Copyright © <b>Padma Gnanapriya.</b> All Rights Reserved.
 
 </footer>
+
+{#  stop developer tools#}
+<script>
+    document.onkeydown = function(e) {
+    if(e.keyCode == 123) {return false;}
+    if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)){return false;}
+    if(e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)){return false;}
+    if(e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)){return false;}
+    if(e.ctrlKey && e.shiftKey && e.keyCode == 'C'.charCodeAt(0)){return false;}}
+</script>
 
 
 <script src="{{url_for('static', filename='js/main.js')}}"></script>
